# Object-Detection-FastAPI

./: .gitignore  Makefile  README.md  pyproject.toml
app/: frontend.py  main.py
